Added links in footer

--- a/src/Sveta/Resources/views/french/layout.twig
+++ b/src/Sveta/Resources/views/french/layout.twig
@@ -25,5 +25,6 @@
 {#% block content %}{% endblock %#}
 
 {% block footer %}
-	&copy; Svetlana Merlet Tonkonog, numéro de SIRET 753-014-190 00015
+	<p>&copy; Svetlana Merlet Tonkonog, numéro de SIRET 753-014-190 00015</p>
+	{{ parent() }}
 {% endblock %}
