--- a/src/Sveta/Resources/views/ukrainian/layout.twig
+++ b/src/Sveta/Resources/views/ukrainian/layout.twig
@@ -25,5 +25,6 @@
 {#% block content %}{% endblock %#}
 
 {% block footer %}
-	&copy; Світлана Мерлє-Тонконог, Номер SIRET 753-014-190 00015
+	<p>&copy; Світлана Мерлє-Тонконог, Номер SIRET 753-014-190 00015</p>
+	{{ parent() }}
 {% endblock %}
