--- a/src/Sveta/Resources/views/russian/layout.twig
+++ b/src/Sveta/Resources/views/russian/layout.twig
@@ -25,5 +25,6 @@
 {#% block content %}{% endblock %#}
 
 {% block footer %}
-	&copy; Светлана Мерле-Тонконог, номер SIRET 753-014-190 00015
+	<p>&copy; Светлана Мерле-Тонконог, номер SIRET 753-014-190 00015</p>
+	{{ parent() }}
 {% endblock %}
