Added Google Analytics tracking javascript code

--- a/src/Sveta/Resources/views/layout.twig
+++ b/src/Sveta/Resources/views/layout.twig
@@ -54,5 +54,8 @@
         <script src="http://code.jquery.com/jquery-latest.js"></script>
         <script src="/js/bootstrap.js"></script>
         <script src="/js/script.js"></script>
+        {% if app.ga_tracking_id %}
+            {% include '_google_analytics.twig' %}
+        {% endif %}
     </body>
 </html>
