Tweaked French version

--- a/src/Sveta/Resources/views/french/experience.twig
+++ b/src/Sveta/Resources/views/french/experience.twig
@@ -55,7 +55,7 @@
                 <td>juillet 2012</td>
                 <td><a href="http://www.systra.com/">SYSTRA</a></td>
                 <td>France</td>
-                <td>chuchotage lors la présentation d'un logiciel pour une délégation d'un client ukrainien de SYSTRA</td>
+                <td>chuchotage lors de la présentation d'un logiciel pour une délégation d'un client ukrainien de SYSTRA</td>
                 <td>français, ukrainien, russe</td>
             </tr>
             <tr>
@@ -83,14 +83,14 @@
                 <td>mars 2012</td>
                 <td>Mega-Rosttorg</td>
                 <td>France</td>
-                <td>inteprétation d'accompagnement pour un client russe lors de l'exposition <a href="http://www.europain.com/">EuroPain</a></td>
+                <td>interprétation d'accompagnement pour un client russe lors de l'exposition <a href="http://www.europain.com/">EuroPain</a></td>
                 <td>russe, français</td>
             </tr>
             <tr>
                 <td>septembre 2011 et février 2012</td>
                 <td><a href="http://novaline.by">Nova Line</a></td>
                 <td>France</td>
-                <td>inteprétation d'accompagnement pour un client biélorusse lors des expositions <a href="http://www.texworld.messefrankfurt.com/paris/en/visitors/abouttexworld.html">TexWorld</a> et <a href="http://www.premierevision.com/">Première Vision</a></td>
+                <td>interprétation d'accompagnement pour un client biélorusse lors des expositions <a href="http://www.texworld.messefrankfurt.com/paris/en/visitors/abouttexworld.html">TexWorld</a> et <a href="http://www.premierevision.com/">Première Vision</a></td>
                 <td>russe, français, anglais</td>
             </tr>
             <tr>
@@ -125,7 +125,7 @@
                 <td>septembre à avril 2007</td>
                 <td>revendeur <a href="http://www.professionalbyfama.com/">Professional By Fama</a></td>
                 <td>Ukraine</td>
-                <td>traduction technique de documentations et inteprètation de liaison dans les domaines du luxe et de la mode</td>
+                <td>traduction technique de documentations et interprétation de liaison dans les domaines du luxe et de la mode</td>
                 <td>ukrainien, russe, anglais</td>
             </tr>
         </tbody>
@@ -140,7 +140,7 @@
     <ul>
         <li>Master of Arts, option linguistique, interprétation et traduction en Anglais et Français. Diplôme obtenu en 2007 à l'<a href="http://www-foreign.univer.kharkov.ua/eng/index.html">École de langues étrangères</a> de l'<a href="http://www.univer.kharkov.ua/en">Université Nationale Karazine de Kharkov</a> en Ukraine.</li>
 
-        <li>Bachelor of Arts, option linguistique, inteprétation et traduction en Anglais. Diplôme obtenu en 2006 à l'<a href="http://www-foreign.univer.kharkov.ua/eng/index.html">École de langues étrangères</a> de l'<a href="http://www.univer.kharkov.ua/en">Université Nationale Karazine de Kharkov</a> en Ukraine.</li>
+        <li>Bachelor of Arts, option linguistique, interprétation et traduction en Anglais. Diplôme obtenu en 2006 à l'<a href="http://www-foreign.univer.kharkov.ua/eng/index.html">École de langues étrangères</a> de l'<a href="http://www.univer.kharkov.ua/en">Université Nationale Karazine de Kharkov</a> en Ukraine.</li>
     </ul>
 {% endblock %}
 
