--- a/src/Sveta/Resources/views/french/home.twig
+++ b/src/Sveta/Resources/views/french/home.twig
@@ -22,17 +22,17 @@
 {% block content %}
     <h3>Bienvenue !</h3>
 
-    <p>Je m'appelle Svetlana Merlet (née Tonkonog), je suis originaire d'Ukraine et je vis actuellement à Paris. Je propose des <a href="/french/service">services d'interpétation et de traduction</a> adaptés à vos attentes.</p>
+    <p>Je m'appelle Svetlana Merlet (née Tonkonog), je suis originaire d'Ukraine et je vis actuellement à Paris. Je propose des <a href="/french/service">services d'interprétation et de traduction</a> adaptés à vos attentes.</p>
 
     <p>Mon expérience et mon professionnalisme me permettent de fournir un travail de qualité en répondant au mieux aux exigences de chacun de <a href="/french/experience">mes clients</a>.</p>
 
     <p>Je maîtrise quatre langues :</p>
 
     <ul>
-        <li>Ukrainien, langue maternelle (langue A) ;</li>
-        <li>Russe, Langue maternelle (langue A) ;</li>
-        <li>Français, Etudiée à l'école pendant 5 ans (niveau Master), Pratiquée couramment depuis 2007 (langue B) ;</li>
-        <li>Anglais, Etudiée à l'école pendant 5 ans (niveau Master), Utilisée professionnellement depuis 2005 (langue B).</li>
+        <li>l'ukrainien, langue maternelle (langue A) ;</li>
+        <li>le russe, langue maternelle (langue A) ;</li>
+        <li>le français, étudiée à l'école pendant 5 ans (niveau Master), pratiquée couramment depuis 2007 (langue B) ;</li>
+        <li>l'anglais, étudiée à l'école pendant 5 ans (niveau Master), utilisée professionnellement depuis 2005 (langue B).</li>
     </ul>
 
     <p>Mon activité professionnelle m'a permis d'acquérir de l'expérience dans les domaines suivants : médecine, pharmacie, textile, télécommunications, internet, informatique, design, mode, luxe, transport, banques, finance, assurances, sciences, alimentation.</p>
