Updated Twig templates to use html5 tags

--- a/src/Sveta/Resources/views/french/layout.twig
+++ b/src/Sveta/Resources/views/french/layout.twig
@@ -1,29 +1,29 @@
 {% extends '/layout.twig' %}
 
 {% block page_title %}
-	Svetlana Merlet Tonkonog
+    Svetlana Merlet Tonkonog
 {% endblock %}
 
 {% block header_title %}
-	Svetlana Merlet Tonkonog
+    Svetlana Merlet Tonkonog
 {% endblock %}
 
 {% block header_lead %}
-	Interprète et traductrice en français, anglais, russe et ukrainien
+    Interprète et traductrice en français, anglais, russe et ukrainien
 {% endblock %}
 
 {#% block navbar %}{% endblock %#}
 
 {% block aside %}
-	<div id="aside-container">
+    <aside>
         <h4>Mes coordonnées</h4>
         <p>+33.(0)6.59.82.82.17</p>
         <p>interpretation@merlet.biz</p>
-    </div>
+    </aside>
 {% endblock %}
 
 {#% block content %}{% endblock %#}
 
 {% block footer %}
-	<p>&copy; Svetlana Merlet Tonkonog, numéro de SIRET 753-014-190 00015</p>
+    <p>&copy; Svetlana Merlet Tonkonog, numéro de SIRET 753-014-190 00015</p>
 {% endblock %}
