--- a/src/Sveta/Resources/views/ukrainian/layout.twig
+++ b/src/Sveta/Resources/views/ukrainian/layout.twig
@@ -1,29 +1,29 @@
 {% extends '/layout.twig' %}
 
 {% block page_title %}
-	Світлана Мерлє-Тонконог
+    Світлана Мерлє-Тонконог
 {% endblock %}
 
 {% block header_title %}
-	Світлана Мерлє-Тонконог
+    Світлана Мерлє-Тонконог
 {% endblock %}
 
 {% block header_lead %}
-	Усний та письмовий перекладач французької, англійської, російської та української мов
+    Усний та письмовий перекладач французької, англійської, російської та української мов
 {% endblock %}
 
 {#% block navbar %}{% endblock %#}
 
 {% block aside %}
-	<div id="aside-container">
+    <aside>
         <h4>Зв'язатися зі мною</h4>
         <p>+33.(0)6.59.82.82.17</p>
         <p>interpretation@merlet.biz</p>
-    </div>
+    </aside>
 {% endblock %}
 
 {#% block content %}{% endblock %#}
 
 {% block footer %}
-	<p>&copy; Світлана Мерлє-Тонконог, Номер SIRET 753-014-190 00015</p>
+    <p>&copy; Світлана Мерлє-Тонконог, Номер SIRET 753-014-190 00015</p>
 {% endblock %}
