--- a/src/Sveta/Resources/views/russian/layout.twig
+++ b/src/Sveta/Resources/views/russian/layout.twig
@@ -1,29 +1,29 @@
 {% extends '/layout.twig' %}
 
 {% block page_title %}
-	Светлана Мерле-Тонконог
+    Светлана Мерле-Тонконог
 {% endblock %}
 
 {% block header_title %}
-	Светлана Мерле-Тонконог
+    Светлана Мерле-Тонконог
 {% endblock %}
 
 {% block header_lead %}
-	Устный и письменный переводчик француского, английского, русского и украинского языков
+    Устный и письменный переводчик француского, английского, русского и украинского языков
 {% endblock %}
 
 {#% block navbar %}{% endblock %#}
 
 {% block aside %}
-	<div id="aside-container">
+    <aside>
         <h4>Мои контакты</h4>
         <p>+33.(0)6.59.82.82.17</p>
         <p>interpretation@merlet.biz</p>
-    </div>
+    </aside>
 {% endblock %}
 
 {#% block content %}{% endblock %#}
 
 {% block footer %}
-	<p>&copy; Светлана Мерле-Тонконог, номер SIRET 753-014-190 00015</p>
+    <p>&copy; Светлана Мерле-Тонконог, номер SIRET 753-014-190 00015</p>
 {% endblock %}
