Removed now invalid SIRET

--- a/src/Sveta/Resources/views/french/layout.twig
+++ b/src/Sveta/Resources/views/french/layout.twig
@@ -25,5 +25,5 @@
 {#% block content %}{% endblock %#}
 
 {% block footer %}
-    <p>&copy; Svetlana Merlet Tonkonog, numéro de SIRET 753-014-190 00015</p>
+    <p>&copy; Svetlana Merlet Tonkonog</p>
 {% endblock %}
