--- a/src/Sveta/Resources/views/ukrainian/layout.twig
+++ b/src/Sveta/Resources/views/ukrainian/layout.twig
@@ -25,5 +25,5 @@
 {#% block content %}{% endblock %#}
 
 {% block footer %}
-    <p>&copy; Світлана Мерлє-Тонконог, Номер SIRET 753-014-190 00015</p>
+    <p>&copy; Світлана Мерлє-Тонконог</p>
 {% endblock %}
