--- a/src/Sveta/Resources/views/_google_analytics.twig
+++ b/src/Sveta/Resources/views/_google_analytics.twig
@@ -1,6 +1,7 @@
+{% if ga_tracking_id %}
 <script type="text/javascript">
     var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', '{{ app.ga_tracking_id }}']);
+    _gaq.push(['_setAccount', '{{ ga_tracking_id }}']);
     _gaq.push(['_trackPageview']);
     (function() {
         var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
@@ -8,3 +9,4 @@
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
     })();
 </script>
+{% endif %}
