--- a/templates/layout.twig
+++ b/templates/layout.twig
@@ -41,7 +41,7 @@
             {% block footer %}{% endblock %}
             {% include '_footer_links.twig' %}
         </footer>
-        <script src="http://code.jquery.com/jquery-latest.js"></script>
+        <script src="//code.jquery.com/jquery-latest.js"></script>
         <script src="/js/bootstrap.js"></script>
         <script src="/js/script.js"></script>
         {% include '_google_analytics.twig' %}
