--- a/templates/english/quote.twig
+++ b/templates/english/quote.twig
@@ -1,12 +1,8 @@
-{% extends '@english/layout.twig' %}
+{% extends 'english/layout.twig' %}
 
 {% block page_title %}
     Free quote - {{ parent() }}
 {% endblock %}
-
-{#% block header_title %}{% endblock %#}
-
-{#% block header_lead %}{% endblock %#}
 
 {% block navbar %}
     <ul class="nav">
@@ -112,5 +108,3 @@
         <dd>interpretation@merlet.biz</dd>
     </dl>
 {% endblock %}
-
-{#% block footer %}{% endblock %#}
