--- a/templates/ukrainian/quote.twig
+++ b/templates/ukrainian/quote.twig
@@ -1,12 +1,8 @@
-{% extends '@ukrainian/layout.twig' %}
+{% extends 'ukrainian/layout.twig' %}
 
 {% block page_title %}
     Розрахунок вартості замовлення - {{ parent() }}
 {% endblock %}
-
-{#% block header_title %}{% endblock %#}
-
-{#% block header_lead %}{% endblock %#}
 
 {% block navbar %}
     <ul class="nav">
@@ -104,5 +100,3 @@
         <dd>interpretation@merlet.biz</dd>
     </dl>
 {% endblock %}
-
-{#% block footer %}{% endblock %#}
