--- a/templates/english/experience.twig
+++ b/templates/english/experience.twig
@@ -1,12 +1,8 @@
-{% extends '@english/layout.twig' %}
+{% extends 'english/layout.twig' %}
 
 {% block page_title %}
     Overall background - {{ parent() }}
 {% endblock %}
-
-{#% block header_title %}{% endblock %#}
-
-{#% block header_lead %}{% endblock %#}
 
 {% block navbar %}
     <ul class="nav">
@@ -16,8 +12,6 @@
         <li class=""><a href="/english/quote"><i class="icon-question-sign"></i> Free quote</a></li>
     </ul>
 {% endblock %}
-
-{#% block aside %}{% endblock %#}
 
 {% block content %}
     <h3>My professional experience</h3>
@@ -142,5 +136,3 @@
         <li>Bachelor of Arts in linguistics in English. <a href="http://www.univer.kharkov.ua/en">Karazin Kharkov National University</a>, <a href="http://www-foreign.univer.kharkov.ua/eng/index.html">Faculty of Foreign Languages</a> Ukraine. Diploma obrained in 2006.</li>
     </ul>
 {% endblock %}
-
-{#% block footer %}{% endblock %#}
