--- a/templates/english/service.twig
+++ b/templates/english/service.twig
@@ -1,12 +1,8 @@
-{% extends '@english/layout.twig' %}
+{% extends 'english/layout.twig' %}
 
 {% block page_title %}
     My services - {{ parent() }}
 {% endblock %}
-
-{#% block header_title %}{% endblock %#}
-
-{#% block header_lead %}{% endblock %#}
 
 {% block navbar %}
     <ul class="nav">
@@ -16,8 +12,6 @@
         <li class=""><a href="/english/quote"><i class="icon-question-sign"></i> Free quote</a></li>
     </ul>
 {% endblock %}
-
-{#% block aside %}{% endblock %#}
 
 {% block content %}
     <h3>Simultaneous interpretation</h3>
@@ -44,5 +38,3 @@
 
     <p>Opposite to the interpretation, the translation  is performed in a written form. The aim is to reproduce the text of a non-literary document by converting it from an original language into a target language. While translating a written document it is necessary to mind its grammatical, lexical and stylistical peculiairities. For exemple, this kind of translation can be applied to translating contracts, notices, manuals, web sites, and many others.</p>
 {% endblock %}
-
-{#% block footer %}{% endblock %#}
