--- a/templates/russian/home.twig
+++ b/templates/russian/home.twig
@@ -1,12 +1,8 @@
-{% extends '@russian/layout.twig' %}
+{% extends 'russian/layout.twig' %}
 
 {% block page_title %}
     Главная - {{ parent() }}
 {% endblock %}
-
-{#% block header_title %}{% endblock %#}
-
-{#% block header_lead %}{% endblock %#}
 
 {% block navbar %}
     <ul class="nav">
@@ -16,8 +12,6 @@
         <li class=""><a href="/russian/quote"><i class="icon-question-sign"></i> Бесплатный расчёт стоимости</a></li>
     </ul>
 {% endblock %}
-
-{#% block aside %}{% endblock %#}
 
 {% block content %}
     <h3>Добро пожаловать!</h3>
@@ -39,5 +33,3 @@
 
     <p>Буду рада совместному сотрудничеству!</p>
 {% endblock %}
-
-{#% block footer %}{% endblock %#}
