--- a/templates/ukrainian/experience.twig
+++ b/templates/ukrainian/experience.twig
@@ -1,12 +1,8 @@
-{% extends '@ukrainian/layout.twig' %}
+{% extends 'ukrainian/layout.twig' %}
 
 {% block page_title %}
     Досвід та освіта - {{ parent() }}
 {% endblock %}
-
-{#% block header_title %}{% endblock %#}
-
-{#% block header_lead %}{% endblock %#}
 
 {% block navbar %}
     <ul class="nav">
@@ -16,8 +12,6 @@
         <li class=""><a href="/ukrainian/quote"><i class="icon-question-sign"></i> Розрахунок вартості замовлення</a></li>
     </ul>
 {% endblock %}
-
-{#% block aside %}{% endblock %#}
 
 {% block content %}
     <h3>Мій досвід</h3>
@@ -143,5 +137,3 @@
         <li>2006 рік  - <a href="http://www.univer.kharkov.ua">Харьківський національний університет ім. В.Н. Каразіна</a>, <a href="http://www-foreign.univer.kharkov.ua">факультет іноземних мов</a>, кафедра англійської філології. «Бакалавр» Філолог, викладач англійської мови та літератури.</li>
     </ul>
 {% endblock %}
-
-{#% block footer %}{% endblock %#}
