Move CSS and JS from public to assets

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,141 @@
-body {
-    background-color: lightgray;
+/*
+ * CSS based on a palette found on COLOURlovers
+ * http://www.colourlovers.com/palette/1024017/ReadyDone
+ *
+ * dark orange:  FF8F24
+ * light orange: FEAE37
+ * dark blue:    2F8DCA
+ * light blue:   51B4D4
+ * ivory white:  EFEFEF
+ * dark brown:   61473A
+ * dark black:   303030
+ */
+
+/* container size */
+header,
+section,
+footer {
+    margin: 20px auto;
+    max-width: 950px;
+}
+
+/* header styles */
+header {
+    border-bottom: none;
+}
+
+header a,
+header a:hover {
+    color: #FEAE37;
+}
+
+header p {
+    margin-left: 20px;
+    color: #51B4D4;
+}
+
+header select {
+    border-color: #51B4D4;
+    border-width: 3px;
+    color: #2F8DCA;
+    font-weight: bold;
+    height: 33px;
+    line-height: 33px;
+    width: 100%;
+}
+
+/* section styles */
+section {
+    background-color: #EFEFEF;
+    border: 2px solid #61473A;
+    border-radius: 10px;
+    padding: 2px;
+}
+
+section .container-fluid {
+    background-color: #EFEFEF;
+    border: 1px solid #61473A;
+    border-radius: 6px;
+    padding: 30px 50px;
+    text-align: justify;
+}
+
+/* aside styles */
+aside {
+    background-color: #2F8DCA;
+    border: 1px solid #51B4D4;
+    border-radius: 6px;
+    color: #EFEFEF;
+    display: inline-block;
+    float: right;
+    padding: 10px;
+    margin: 10px 0 20px 20px;
+    text-align: center;
+}
+
+aside h4 {
+    background-color: #EFEFEF;
+    border: 1px solid #51B4D4;
+    border-radius: 3px;
+    color: #FF8F24;
+    margin: 0;
+    padding: 3px 20px;
+}
+
+aside p {
+    margin: 10px 0 0 0;
+    font-weight: bold;
+}
+
+/* articles styles */
+article h3 {
+    color: #2F8DCA;
+}
+
+article th {
+    text-align: center;
+}
+
+article label {
+    font-style: italic;
+}
+
+article select {
+    border-color: #61473A;
+}
+
+article .control-label {
+    margin-right: 20px;
+    width: 180px;
+}
+
+article .control-group {
+    margin-bottom: 10px;
+}
+
+article .form-action {
+    text-align: center;
+}
+
+article .btn-primary,
+article .btn-primary:hover {
+    color: #303030;
+}
+
+article dt {
+    font-weight: normal;
+    font-style: italic;
+    width: 180px;
+}
+
+article dd {
+    font-weight: bold;
+    margin-bottom: 10px;
+    margin-left: 200px;
+}
+
+/* footer styles */
+footer {
+    color: #EFEFEF;
+    text-align: center;
 }
