Remove hardcoded CSS and JS from HTML layout

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,5 @@
+@import "./customized-bootstrap.css";
+
 /*
  * CSS based on a palette found on COLOURlovers
  * http://www.colourlovers.com/palette/1024017/ReadyDone
