Extract partials from app.scss file

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,132 +1,9 @@
 @import "./customized-bootstrap.css";
 
 @import "variables";
-
-/* container size */
-header,
-section,
-footer {
-    margin: 20px auto;
-    max-width: 950px;
-}
-
-/* header styles */
-header {
-    border-bottom: none;
-}
-
-header a,
-header a:hover {
-    color: $light-orange;
-}
-
-header p {
-    margin-left: 20px;
-    color: $light-blue;
-}
-
-header select {
-    border-color: $light-blue;
-    border-width: 3px;
-    color: $dark-blue;
-    font-weight: bold;
-    height: 33px;
-    line-height: 33px;
-    width: 100%;
-}
-
-/* section styles */
-section {
-    background-color: $ivory-white;
-    border: 2px solid $dark-brown;
-    border-radius: 10px;
-    padding: 2px;
-}
-
-section .container-fluid {
-    background-color: $ivory-white;
-    border: 1px solid $dark-brown;
-    border-radius: 6px;
-    padding: 30px 50px;
-    text-align: justify;
-}
-
-/* aside styles */
-aside {
-    background-color: $dark-blue;
-    border: 1px solid $light-blue;
-    border-radius: 6px;
-    color: $ivory-white;
-    display: inline-block;
-    float: right;
-    padding: 10px;
-    margin: 10px 0 20px 20px;
-    text-align: center;
-}
-
-aside h4 {
-    background-color: $ivory-white;
-    border: 1px solid $light-blue;
-    border-radius: 3px;
-    color: $dark-orange;
-    margin: 0;
-    padding: 3px 20px;
-}
-
-aside p {
-    margin: 10px 0 0 0;
-    font-weight: bold;
-}
-
-/* articles styles */
-article h3 {
-    color: $dark-blue;
-}
-
-article th {
-    text-align: center;
-}
-
-article label {
-    font-style: italic;
-}
-
-article select {
-    border-color: $dark-brown;
-}
-
-article .control-label {
-    margin-right: 20px;
-    width: 180px;
-}
-
-article .control-group {
-    margin-bottom: 10px;
-}
-
-article .form-action {
-    text-align: center;
-}
-
-article .btn-primary,
-article .btn-primary:hover {
-    color: $dark-black;
-}
-
-article dt {
-    font-weight: normal;
-    font-style: italic;
-    width: 180px;
-}
-
-article dd {
-    font-weight: bold;
-    margin-bottom: 10px;
-    margin-left: 200px;
-}
-
-/* footer styles */
-footer {
-    color: $ivory-white;
-    text-align: center;
-}
+@import "layout";
+@import "header";
+@import "main";
+@import "aside";
+@import "article";
+@import "footer";
