--- a/templates/layout.twig
+++ b/templates/layout.twig
@@ -22,7 +22,7 @@
                 </div>
             </div>
         </header>
-        <section>
+        <main>
             <div class="container-fluid">
                 <nav class="navbar row-fluid">
                     <div class="navbar-inner">
@@ -34,7 +34,7 @@
                     {% block content %}{% endblock %}
                 </article>
             </div>
-        </section>
+        </main>
         <footer>
             {% block footer %}{% endblock %}
             {% include '_footer_links.twig' %}
