Remove bootstrap styles from header

--- a/templates/_language_select.twig
+++ b/templates/_language_select.twig
@@ -1,3 +1,4 @@
+<label>
 <select data-controller="language" data-action="language#redirect" class="hidden">
     <option value="{{ path(route, {'language': 'french'}) }}" {% if language == 'french' %}selected="selected"{% endif %}>
     	Version française
@@ -12,3 +13,4 @@
     	Українська версія
     </option>
 </select>
+</label>
