--- a/templates/french/layout.twig
+++ b/templates/french/layout.twig
@@ -8,7 +8,7 @@
     Svetlana Merlet Tonkonog
 {% endblock %}
 
-{% block header_lead %}
+{% block header_subtitle %}
     Interprète et traductrice en français, anglais, russe et ukrainien
 {% endblock %}
 
