--- a/templates/russian/layout.twig
+++ b/templates/russian/layout.twig
@@ -8,7 +8,7 @@
     Светлана Мерле-Тонконог
 {% endblock %}
 
-{% block header_lead %}
+{% block header_subtitle %}
     Устный и письменный переводчик француского, английского, русского и украинского языков
 {% endblock %}
 
