--- a/templates/ukrainian/layout.twig
+++ b/templates/ukrainian/layout.twig
@@ -8,7 +8,7 @@
     Світлана Мерлє-Тонконог
 {% endblock %}
 
-{% block header_lead %}
+{% block header_subtitle %}
     Усний та письмовий перекладач французької, англійської, російської та української мов
 {% endblock %}
 
