--- a/assets/styles/_header.scss
+++ b/assets/styles/_header.scss
@@ -1,11 +1,19 @@
 header {
+    display: flex;
+
+    div {
+        flex: auto;
+    }
+
     a, a:hover {
         color: $light-orange;
     }
 
     p {
-        margin-left: 20px;
         color: $light-blue;
+        font-size: 20px;
+        font-weight: bold;
+        line-height: 30px;
     }
 
     select {
@@ -15,6 +23,6 @@ header {
         font-weight: bold;
         height: 33px;
         line-height: 33px;
-        width: 100%;
+        width: 200px;
     }
 }
