--- a/templates/layout.twig
+++ b/templates/layout.twig
@@ -7,20 +7,16 @@
         {{ encore_entry_link_tags('app') }}
     </head>
     <body>
-        <header class="container-fluid">
-            <div class="row-fluid">
-                <div class="span9">
-                    <h1>
-                        <a href="{{ path('index') }}">{% block header_title %}{% endblock %}</a>
-                    </h1>
-                    <p class="lead">
-                        {% block header_lead %}{% endblock %}
-                    </p>
-                </div>
-                <div class="span3">
-                    {% include '_language_select.twig' %}
-                </div>
+        <header>
+            <div>
+                <h1>
+                    <a href="{{ path('index') }}">{% block header_title %}{% endblock %}</a>
+                </h1>
+                <p>
+                    {% block header_subtitle %}{% endblock %}
+                </p>
             </div>
+            {% include '_language_select.twig' %}
         </header>
         <main>
             <div class="container-fluid">
