--- a/templates/english/service.twig
+++ b/templates/english/service.twig
@@ -4,12 +4,12 @@
     My services - {{ parent() }}
 {% endblock %}
 
-{% block navbar %}
-    <ul class="nav">
-        <li class=""><a href="/english/home"><i class="icon-home"></i> Home</a></li>
-        <li class="active"><a href="/english/service"><i class="icon-briefcase"></i> My services</a></li>
-        <li class=""><a href="/english/experience"><i class="icon-pencil"></i> Overall background</a></li>
-        <li class=""><a href="/english/quote"><i class="icon-question-sign"></i> Free quote</a></li>
+{% block nav %}
+    <ul>
+        <li><a href="/english/home"><i class="fas fa-home"></i> Home</a></li>
+        <li class="active"><a href="/english/service"><i class="fas fa-briefcase"></i> My services</a></li>
+        <li><a href="/english/experience"><i class="fas fa-globe"></i> Overall background</a></li>
+        <li><a href="/english/quote"><i class="fas fa-comment-dollar"></i> Free quote</a></li>
     </ul>
 {% endblock %}
 
