--- a/templates/russian/experience.twig
+++ b/templates/russian/experience.twig
@@ -4,12 +4,12 @@
     Опыт и образование - {{ parent() }}
 {% endblock %}
 
-{% block navbar %}
-    <ul class="nav">
-        <li class=""><a href="/russian/home"><i class="icon-home"></i> Главная</a></li>
-        <li class=""><a href="/russian/service"><i class="icon-briefcase"></i> Мои услуги</a></li>
-        <li class="active"><a href="/russian/experience"><i class="icon-pencil"></i> Опыт и образование</a></li>
-        <li class=""><a href="/russian/quote"><i class="icon-question-sign"></i> Бесплатный расчёт стоимости</a></li>
+{% block nav %}
+    <ul>
+        <li><a href="/russian/home"><i class="fas fa-home"></i> Главная</a></li>
+        <li><a href="/russian/service"><i class="fas fa-briefcase"></i> Мои услуги</a></li>
+        <li class="active"><a href="/russian/experience"><i class="fas fa-globe"></i> Опыт и образование</a></li>
+        <li><a href="/russian/quote"><i class="fas fa-comment-dollar"></i> Бесплатный расчёт стоимости</a></li>
     </ul>
 {% endblock %}
 
